Revert "Hack: Prevent type foredrag to overflow program title"
This reverts commit 1df30a01a387b3418d0104997a6aa789f2ed635c.

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,13 +8,9 @@
   --hover-bg-color: #f5f5f5;
   --theme-switcher-button: #fff;
 
-  --font-sans: -apple-system, BlinkMacSystemFont, Segoe UI, avenir next, avenir,
-    helvetica neue, helvetica, Ubuntu, roboto, noto, arial, sans-serif;
-  --font-mono: FMono-Regular, Consolas, DejaVu Sans Mono, Liberation Mono, Menlo,
-    monospace;
-  --font-serif: Iowan Old Style, Apple Garamond, Baskerville, Georgia,
-    Times New Roman, Droid Serif, Times, Source Serif Pro, serif,
-    Apple Color Emoji;
+  --font-sans: -apple-system, BlinkMacSystemFont, Segoe UI, avenir next, avenir, helvetica neue, helvetica, Ubuntu, roboto, noto, arial, sans-serif;
+  --font-mono: FMono-Regular, Consolas, DejaVu Sans Mono, Liberation Mono, Menlo, monospace;
+  --font-serif: Iowan Old Style, Apple Garamond, Baskerville, Georgia, Times New Roman, Droid Serif, Times, Source Serif Pro, serif, Apple Color Emoji;
 
   --font-size-desktop: 18px;
   --font-size-mobile: 15px;
@@ -24,13 +20,14 @@
 
   --bp-medium: 600px;
   --bp-large: 768px;
+
 }
 
 [data-theme="dark"] {
-  --background-color: #1c1f20;
+  --background-color: #1C1F20;
   --font-color: white;
   --logo-font-color: black;
-  --primary-color: #00f5c9;
+  --primary-color: #00F5C9;
   --button-text: #171717;
   --odd-bg-color: #323536;
   --hover-bg-color: #141414;
@@ -161,6 +158,7 @@ section.program ul {
   padding: 0;
 
   li {
+
     &:nth-child(even) {
       background-color: var(--odd-bg-color);
     }
@@ -176,7 +174,7 @@ section.program ul {
       display: block;
     }
 
-    & > * {
+    &>* {
       padding: var(--default-padding);
 
       @media screen and (max-width: 640px) {
@@ -187,9 +185,6 @@ section.program ul {
     h3 {
       grid-area: heading;
       margin: 0;
-      max-width: calc(
-        100vw - 155px
-      ); // FIXME: this is a hack to prevent program title to be under the "foredrag" type box
     }
 
     .time {
